--- a/teaching/21F-3110/index.htm
+++ b/teaching/21F-3110/index.htm
@@ -132,105 +132,105 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 1</b> <br> 8/24 </font></td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Introduction and course overview [<a href="slides\3110-lecture 1-Introduction and course overview.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font>
+				Introduction and course overview [<a href="slides\3110-lecture 1-Introduction and course overview.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 8/26 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Algorithm Analysis I [<a href="slides\3110-lecture 2-Algorithm Analysis I.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Algorithm Analysis I [<a href="slides\3110-lecture 2-Algorithm Analysis I.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
 		<tr>
 			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 2</b> <br> 8/31 </font></td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Algorithm Analysis I (cont.) [<a href="slides\3110-lecture 3-Algorithm Analysis I-2.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font>
+				Algorithm Analysis I (cont.) [<a href="slides\3110-lecture 3-Algorithm Analysis I-2.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 9/2 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Algorithm Analysis I (cont.) [<a href="slides\3110-lecture 4-Algorithm Analysis I-3.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Algorithm Analysis I (cont.) [<a href="slides\3110-lecture 4-Algorithm Analysis I-3.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
 		<tr>
 			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 3</b> <br> 9/7 </font></td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Algorithm Analysis I (cont.) [<a href="slides\3110-lecture 4-Algorithm Analysis I-3.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font>
+				Algorithm Analysis I (cont.) [<a href="slides\3110-lecture 4-Algorithm Analysis I-3.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Quiz 1 </font></td>
 		</tr>
 		
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 9/9 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Recurrence Relations [<a href="slides\3110-lecture 5-Recurrence Relations.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Recurrence Relations [<a href="slides\3110-lecture 5-Recurrence Relations.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
 		<tr>
 			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 4</b> <br> 9/13 </font></td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Recurrence Relations (cont.) [<a href="slides\3110-lecture 5-Recurrence Relations.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font>
+				Recurrence Relations (cont.) [<a href="slides\3110-lecture 5-Recurrence Relations.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Assignment 1, due at 9/21/2021 </font></td>
 		</tr>
 		
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 9/16 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Abstract Data Type [<a href="slides\3110-lecture 6-Abstract Data Type.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Abstract Data Type [<a href="slides\3110-lecture 6-Abstract Data Type.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
 		<tr>
 			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 5</b> <br> 9/21 </font></td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Abstract Data Type (cont.) [<a href="slides\3110-lecture 6-Abstract Data Type.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font>
+				Abstract Data Type (cont.) [<a href="slides\3110-lecture 6-Abstract Data Type.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  Assignment 2, due at 10/5/2021</font></td>
 		</tr>
 		
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 9/23 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Tree [<a href="slides\3110-lecture 7-Tree.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Tree [<a href="slides\3110-lecture 7-Tree.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
 		<tr>
 			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 6</b> <br> 9/28 </font></td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Tree (cont.) [<a href="slides\3110-lecture 7-Tree.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font>
+				Tree (cont.) [<a href="slides\3110-lecture 7-Tree.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> -</font></td>
 		</tr>
 		
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 9/30 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Tree (cont.) [<a href="slides\3110-lecture 7-Tree.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Tree (cont.) [<a href="slides\3110-lecture 7-Tree.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Quiz 2 </font></td>
 		</tr>
 		
 		<tr>
 			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 7</b> <br> 10/5 </font></td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Splay Tree [<a href="slides\3110-lecture 8-Splay Tree.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font>
+				Splay Tree [<a href="slides\3110-lecture 8-Splay Tree.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> -</font></td>
 		</tr>
 		
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 10/7 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Splay Tree (cont.) [<a href="slides\3110-lecture 8-Splay Tree.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Splay Tree (cont.) [<a href="slides\3110-lecture 8-Splay Tree.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
 		<tr>
 			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 8</b> <br> 10/12 </font></td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Priority Queues [<a href="slides\3110-lecture 9-Priority Queues.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font>
+				Priority Queues [<a href="slides\3110-lecture 9-Priority Queues.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> -</font></td>
 		</tr>
@@ -238,7 +238,7 @@ div img:hover{
 		
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 10/14 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Priority Queues (cont.) [<a href="slides\3110-lecture 9-Priority Queues.pdf" target="_blank"><font color="#0099ff">PDF</font></a>] and Review</font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Priority Queues (cont.) [<a href="slides\3110-lecture 9-Priority Queues.pdf" target="_blank"><font color="#0099ff">Slides</font></a>] and Review</font></td>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
@@ -246,7 +246,7 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 9</b> <br> 10/19 </font></td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Hashing [<a href="slides\3110-lecture 10-Hashing.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font>
+				Hashing [<a href="slides\3110-lecture 10-Hashing.pdf" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> -</font></td>
 		</tr>
@@ -261,14 +261,14 @@ div img:hover{
 		<tr>
 			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 10</b> <br> 10/26 </font></td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Sorting [<a href="slides\3110-lecture 11-Sorting.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font>
+				Sorting [<a href="slides\3110-lecture 11-Sorting.pptx" target="_blank"><font color="#0099ff">Slides</font></a>]</font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Assignment 3, due at 11/2/2021</font></td>
 		</tr>
 		
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 10/28 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Sorting (cont.) [<a href="slides\3110-lecture 11-Sorting.pdf" target="_blank"><font color="#0099ff">PDF</font></a>]</font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Sorting (cont.) [<a href="slides\3110-lecture 11-Sorting.pptx" target="_blank"><font color="#0099ff">Slides</font></a>]</font></td>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Quiz 3 </font></td>
 		
 	</table>
