--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -166,7 +166,7 @@ course website regularly for updated reading materials.</font>
 		<tr>
 			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 1</b> <br> 1/18 </font></td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Introduction <!--[<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]--></font>
+				<b>Introduction</b> <!--[<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]--></font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>-</b> </font></td>
 			<td width=200 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
@@ -174,7 +174,7 @@ course website regularly for updated reading materials.</font>
 		
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 1/20 </font></td>
-			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Machine Learning Overview <!--[<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]--></font></td>
+			<td width=500  style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Machine Learning Overview</b> <!--[<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]--></font></td>
 			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning, Ch 1-5 </font></td>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
@@ -182,7 +182,7 @@ course website regularly for updated reading materials.</font>
 		<tr>
 			<td width=100  style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 2</b> <br> 1/25 </font></td>
 			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Machine Learning Overview (cont.) <!--[<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]--></font>
+				<b>Machine Learning Overview (cont.)</b> <!--[<a href="#" target="_blank"><font color="#0099ff">Slides</font></a>]--></font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning, Ch 1-5 </font></td>
 			<td width=200 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
@@ -193,7 +193,7 @@ course website regularly for updated reading materials.</font>
 			<td width=100  style='width:80.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 1/27 </font></td>
 			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
 			<font size="4"> 
-				Neural Network Basics
+				<b>Neural Network Basics</b>
 					<ul style="margin-top:5px;margin-bottom:5px;">
 						<li>
 							<font size="4"> Network architecture </font>
@@ -290,12 +290,12 @@ course website regularly for updated reading materials.</font>
 			<font size="4"> 
 					<ul style="margin-top:5px;margin-bottom:5px;">
 						<li>
-							<font size="4"> PyTorch tutorial by Simon Tandi </font>
+							<font size="4"> Deep neural network training - part 2 </font>
 						</li>
 					</ul>
 			</font>
 			</td>
-			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 7, 8, 11 </font></td>
 			<td width=200 style='width:180.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
@@ -305,13 +305,13 @@ course website regularly for updated reading materials.</font>
 			<font size="4"> 
 					<ul style="margin-top:5px;margin-bottom:5px;">
 					<li>
-						<font size="4"> Deep neural network training - part 2 </font>
+						<font size="4"> PyTorch tutorial by Simon Tandi  </font>
 					</li>
 					</ul>
 				
 			</font>
 			</td>
-			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 7, 8, 11 </font></td>
+			<td width=500 style='width:480.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 			<td width=200 style='width:180.0pt;background:#E8DAEF;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 		
