--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -131,7 +131,7 @@ course website regularly for updated reading materials.</font>
 	
 	<ul>
 		<li>
-			<font size="4"> <b>02/08/2022:</b> The paper review list 2 is out; due on <font color="#FF0000">Mar. 15, 2022</font>.</font>
+			<font size="4"> <b>03/08/2022:</b> The paper review list 2 is out; due on <font color="#FF0000">Mar. 15, 2022</font>.</font>
 		</li>
 		<li>
 			<font size="4"> <b>02/28/2022:</b> The paper review list 1 is out; due on <font color="#FF0000">Mar. 8, 2022</font>.</font>
@@ -382,7 +382,7 @@ course website regularly for updated reading materials.</font>
 			</font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#A9CCE3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-			<td width=200 style='width:180.0pt;background:#A9CCE3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <font size="4" color="#FF0000">Review list 1 is out; due on 3/8</font> </font></td>
+			<td width=200 style='width:180.0pt;background:#A9CCE3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <font size="4" color="#FF0000">Review list 1 is out, due on 3/8</font> </font></td>
 		</tr>
 		
 		<tr>
@@ -392,10 +392,7 @@ course website regularly for updated reading materials.</font>
 				<b>Convolutional Neural Networks (CNNs)</b>
 					<ul style="margin-top:5px;margin-bottom:5px;">
 					<li>
-						<font size="4"> Convolution  </font>
-					</li>
-					<li>
-						<font size="4"> Pooling  </font>
+						<font size="4"> Convolution and Pooling </font>
 					</li>
 					</ul>
 				
@@ -411,16 +408,28 @@ course website regularly for updated reading materials.</font>
 			<font size="4"> 
 					<ul style="margin-top:5px;margin-bottom:5px;">
 						<li>
-							<font size="4"> CNN architectures </font>
-						</li>
+						<font size="4"> Convolution and Pooling (cont.) </font>
+					</li>
+					</ul>
+			</font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 9 </font></td>
+			<td width=200 style='width:180.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <font size="4" color="#FF0000">Review list 2 is out, due on 3/15; <br> Assignment 1 is out, due on 3/25</font> </font></td>
+		</tr>
+		
+		<tr>
+			<td width=100  style='width:80.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 3/10 </font></td>
+			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
+			<font size="4"> 
+					<ul style="margin-top:5px;margin-bottom:5px;">
 						<li>
-							<font size="4"> Applications </font>
+							<font size="4"> CNN Architectures and Applications </font>
 						</li>
 					</ul>
 			</font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 9 </font></td>
-			<td width=200 style='width:180.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=200 style='width:180.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > - </font></td>
 		</tr>
 		
 	</table>
