--- a/teaching/22S-5218_4930/index.htm
+++ b/teaching/22S-5218_4930/index.htm
@@ -414,7 +414,7 @@ course website regularly for updated reading materials.</font>
 			</font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 9 </font></td>
-			<td width=200 style='width:180.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <font size="4" color="#FF0000">Review list 2 is out, due on 3/15; <br> Assignment 1 is out, due on 3/25</font> </font></td>
+			<td width=200 style='width:180.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <font size="4" color="#FF0000">Review list 2 is out, due on 3/15; </font> </font></td>
 		</tr>
 		
 		<tr>
@@ -429,7 +429,7 @@ course website regularly for updated reading materials.</font>
 			</font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 9 </font></td>
-			<td width=200 style='width:180.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > - </font></td>
+			<td width=200 style='width:180.0pt;background:#A3E4D7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4" color="#FF0000"> Assignment 1 is out, due on 3/25;</font> </font></td>
 		</tr>
 		
 	</table>
