--- a/teaching/22F-3110/index.htm
+++ b/teaching/22F-3110/index.htm
@@ -123,6 +123,9 @@ div img:hover{
 		
 		<ul>
 			<li>
+				<font size="4"> <b>11/28/2022:</b>Assignment 4 is out, due at 11:59pm on 12/09/2022. </font>
+			</li>
+			<li>
 				<font size="4"> <b>11/10/2022:</b>  <a href=".\project.htm" target="_blank"><font color="#0099ff">Course project</font></a> is out, due at 11:50pm on 12/09/2022. The</font>
 			</li>
 			<li>
@@ -361,6 +364,14 @@ div img:hover{
 			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 14</b> <br> 11/29 </font></td>
 			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				Graph III </font>
+			</td>
+			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Assignment 4, due at 12/09/2022 </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 12/01 </font></td>
+			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				<font size="4" color="red"> <b>Review</b></font> </font>
 			</td>
 			<td width=200 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
